--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/part_search.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/part_search.html
@@ -106,7 +106,7 @@ $(function(){
 					data[i].RAD_MATNR = "";					
 				}
 				
-				$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
+				showGridTotalRows($("#totalRows"), data);
 				
 				return data;
 			}
