--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/sub_part_list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/sub_part_list.html
@@ -86,7 +86,6 @@ $(function(){
 				let grid = new Array();
 				
 				$.each(data.crossList, function(index, item) {
-					
 					let labst1 = parseInt(item.LABST1);
 					let fgAvail = "";
 					
@@ -104,7 +103,7 @@ $(function(){
 					grid[index] = subPart;
 				});
 				
-				$("#totalRows").html(JpUtilsNumber.addComma(crossList.length) + " row(s).");
+				showGridTotalRows($("#totalRows"), crossList);
 				
 				return grid;
 			}
