--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
@@ -141,6 +141,7 @@ function doSearch()
 	if (JpUtilsString.isEmpty($("#pPartNo").val()))
 	{
 		alert("[[#{HQP_M_EMPTY_PART_NO}]]");
+		$("#pPartNo").focus();
 		return;
 	}	
 	
