--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/popup/error_report.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/popup/error_report.html
@@ -20,7 +20,7 @@
 	$(function(){
 		try
 		{
-			$("#totalRows").html(JpUtilsNumber.addComma(opener.errorOrderItems.length) + " row(s).");			
+			showGridTotalRows($("#totalRows"), opener.errorOrderItems);
 		}
 		catch (e) {}
 		
