--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/view.html
@@ -94,7 +94,7 @@ $(function(){
 					}
 				};
 				
-				$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
+				showGridTotalRows($("#totalRows"), data);
 				
 				return data;
 			}
