--- a/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/js.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/js.html
@@ -15,6 +15,7 @@
 <script th:src="@{/portal/js/jWebppy.utils.object.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.string.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.number.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.array.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.security.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.path.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.form.js}"></script>
