--- a/src/main/resources/templates/platform/mgmt/user/user_group/write.html
+++ b/src/main/resources/templates/platform/mgmt/user/user_group/write.html
@@ -62,7 +62,23 @@ $(document).ready(function() {
 						}
 					});
 				}
-			});			
+			});
+
+			$(".ui.dropdown.langKind").dropdown({
+				onChange: function(value, text, $choice) {
+					let values = $(".ui.dropdown.langKind").dropdown("get value");
+					let items = [];
+					
+					for (let i=0, length=values.length; i<length; i++)
+					{
+						items.push({name: $(".ui.dropdown.langKind").dropdown("get item", values[i]).text(), value: values[i]});						
+					};
+
+					$(".ui.dropdown.defLang")
+						.dropdown("clear")
+						.dropdown({values: items});
+				}
+			});
 
 			$("#FORM_write").form({
 				inline: true,
@@ -143,6 +159,24 @@ $(document).ready(function() {
 							}
 						]
 					},
+					"Allowable Language": {
+						identifier: "langKind",
+						rules: [
+							{
+								type: "empty",
+								prompt: "Please select {name}."
+							}
+						]
+					},
+					"Default Language": {
+						identifier: "defLang",
+						rules: [
+							{
+								type: "empty",
+								prompt: "Please select {name}."
+							}
+						]
+					},					
 					Country: {
 						identifier: "country",
 						rules: [
