--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/list.html
@@ -90,8 +90,6 @@ $(function(){
 		
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true,// 정렬 기능 켬
-		scrollY: 100,
-		serverSide: true,
 		deferLoading: false,
 		columns : [
 			{data: "TKNUM", title: "[[#{HQP_L_SHIPMENT_NO}]]"},				
@@ -112,7 +110,7 @@ $(function(){
 			{targets: [3], className: "dt-body-right"}
 		],
 		ajax: {
-			url: "[[${BASE_PATH}]]/order/delivery/list/data",
+			url: "[[${BASE_PATH}]]/dummy",
 			data: function(p)
 			{
 				p.pFromDate = $("#pFromDate").val();
@@ -128,7 +126,7 @@ $(function(){
 			{				
 				let data = response.RESULT;
 				
-				$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
+				showGridTotalRows($("#totalRows"), data);
 				
 				return data;
 			}			
@@ -140,7 +138,7 @@ $(function(){
 	});
 	
 	// Datatable grid 초기 설정 셋업
-	initGridTable($tableObj);
+	initGridTable($tableObj, {url: "[[${BASE_PATH}]]/order/delivery/list/data"});
 	
 	$("#TBL_grid tbody").on("click", "td:first-child", function (e){				
 		let rowData = $tableObj.row(this).data();
@@ -151,7 +149,7 @@ $(function(){
 	});
 	
 	//처음 접속 시에는 검색 실행하지 않음. 조회->상세보기->조회로 이동했을 때 화면 로딩과 함께 자동으로 검색이 실행되도록 할 때 사용
-	_defaultLoading({ loaded: function() { doSearch(); } });	
+	_defaultLoading($tableObj, { loaded: function() { doSearch(); } });	
 });
 // Search 버튼 클릭
 $("#BTN_search").on("click", function(){		
