--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
@@ -76,10 +76,9 @@ $(function(){
 	
 	Calendar.makeBeetweenCalendar($("#pFromDate"), "[[${pFromDate}]]", $("#pToDate"), "[[${pToDate}]]");
 	
+	let summary = [];
+	
 	$tableObj = $("#TBL_grid").DataTable({
-		ordering: true,// 정렬 기능 켬
-		scrollY: 100,
-		serverSide: true,
 		deferLoading: false,
 		columns : [
 			{data: "VBELN", title: "[[#{HQP_L_ORDER_NO}]]"},//Order No.
@@ -101,9 +100,9 @@ $(function(){
 			{
 				$(row).find("td").addClass("summary");
 			};
-		},
+		},		
 		ajax: {
-			url: "[[${BASE_PATH}]]/order/display/order/list/data",
+			url: "[[${BASE_PATH}]]/dummy",
 			data: function(p)
 			{
 				// ajax로 넘길 파라미터
@@ -116,7 +115,7 @@ $(function(){
 			},
 			dataSrc: function(response)
 			{
-				let result = response.RESULT;
+				let result = JpUtilsArray.emptyIfNull(response.RESULT);
 				let length = result.length;
 				
 				for (let i=0; i<length; i++)
@@ -124,21 +123,19 @@ $(function(){
 					result[i].ERDAT2 = JpUtilsString.trimToEmpty(result[i].ERDAT) + " " + JpUtilsString.trimToEmpty(result[i].ERZET);
 				};
 				
-				let rows = (length > 0) ? length - 1 : 0;
+				showGridTotalRows($("#totalRows"), length-1);
 				
-				$("#totalRows").html(JpUtilsNumber.addComma(rows) + " row(s).");
-
 				return result;
 			}
 		},
 		initComplete:function(settings, json) 
-		{			
+		{
 			ProgressBar.hide();
 		}
 	});
 	
 	// Datatable grid 초기 설정 셋업
-	initGridTable($tableObj);
+	initGridTable($tableObj, {url: "[[${BASE_PATH}]]/order/display/order/list/data"});
 	
 	$("input:radio[name=pDocType]").on("click", function() {
 		let docType = $(this).val();
@@ -185,7 +182,7 @@ $(function(){
 	});
 	
 	//처음 접속 시에는 검색 실행하지 않음. 조회->상세보기->조회로 이동했을 때 화면 로딩과 함께 자동으로 검색이 실행되도록 할 때 사용
-	_defaultLoading({ loaded: function() { doSearch(); }, exceptionParams: ["pDocType"] });	
+	_defaultLoading($tableObj, { loaded: function() { doSearch(); }, exceptionParams: ["pDocType"] });	
 });
 </script>	
 </th:block>
