--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/list.html
@@ -98,8 +98,6 @@ $(function(){
 	
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true,// 정렬 기능 켬
-		scrollY: 100,
-		serverSide: true,
 		deferLoading: false,		
 		columns : [
 			{data: "VBELN", title: "[[#{HQP_L_QUOTATION_NO}]]"},//Inuqiry No.
@@ -117,7 +115,7 @@ $(function(){
 			{targets: 5, className: "dt-body-right"},
 		],
 		ajax: {
-			url: "[[${BASE_PATH}]]/order/display/quot/list/data",
+			url: "[[${BASE_PATH}]]/dummy",
 			data: function(p)
 			{
 				// ajax로 넘길 파라미터
@@ -148,7 +146,7 @@ $(function(){
 					};
 				};
 				
-				$("#totalRows").html(JpUtilsNumber.addComma(result.length) + " row(s).");
+				showGridTotalRows($("#totalRows"), result);
 
 				return result;
 			}
@@ -159,7 +157,7 @@ $(function(){
 	});
 
 	// Datatable grid 초기 설정 셋업
-	initGridTable($tableObj);
+	initGridTable($tableObj, {url: "[[${BASE_PATH}]]/order/display/quot/list/data"});
 	
 	$("input:radio[name=pDocType]").on("click", function() {
 		let docType = $(this).val();
@@ -211,7 +209,7 @@ $(function(){
 	});
 
 	//처음 접속 시에는 검색 실행하지 않음. 조회->상세보기->조회로 이동했을 때 화면 로딩과 함께 자동으로 검색이 실행되도록 할 때 사용
-	_defaultLoading({ loaded: function() { doSearch(); }, exceptionParams: ["pDocType"] });	
+	_defaultLoading($tableObj, { loaded: function() { doSearch(); }, exceptionParams: ["pDocType"] });	
 });
 </script>	
 </th:block>
