--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/list.html
@@ -87,8 +87,6 @@ $(function(){
 			
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true,// 정렬 기능 켬
-		scrollY: 100,
-		serverSide: true,
 		deferLoading: false,
 		columns : [
 			{data: "BSTKD", 		title: "[[#{HQP_L_PO_NO}]]"},
@@ -109,7 +107,7 @@ $(function(){
 			{targets: [2, 4, 5, 6, 7, 8, 9, 11], className: "dt-body-center"}
 		],
 		ajax: {
-			url: "[[${BASE_PATH}]]/order/status/list/data",
+			url: "[[${BASE_PATH}]]/dummy",
 			data: function(p)
 			{
 				p.pDocType = $("#FORM_search input:radio[name=pDocType]:checked").val();
@@ -129,7 +127,7 @@ $(function(){
 					data[i].BO_AMT = Number(data[i].SO_QTY) - Number(data[i].SH_QTY);						
 				};
 				
-				$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
+				showGridTotalRows($("#totalRows"), data);
 
 				return data;
 			}
@@ -141,7 +139,7 @@ $(function(){
 	});
 
 	// Datatable grid 초기 설정 셋업
-	initGridTable($tableObj);
+	initGridTable($tableObj, {url: "[[${BASE_PATH}]]/order/status/list/data"});
 	
 	$("#TBL_grid tbody").on("click", "td:nth-child(2)", function (e){				
 		let rowData = $tableObj.row(this).data();
@@ -158,7 +156,7 @@ $(function(){
 	});
 	
 	//처음 접속 시에는 검색 실행하지 않음. 조회->상세보기->조회로 이동했을 때 화면 로딩과 함께 자동으로 검색이 실행되도록 할 때 사용
-	_defaultLoading({ loaded: function() { doSearch(); } });		
+	_defaultLoading($tableObj, { loaded: function() { doSearch(); } });		
 });
 
 // Search 버튼 클릭
