--- a/src/main/resources/templates/portal/iv/hq/parts/export/claim/display/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/claim/display/list.html
@@ -75,9 +75,7 @@ $(function(){
 
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true, 
-		scrollY: 100,
-		//fixedColumns: {leftColumns: 3},
-		columns : [
+		columns: [
 			{data: "VBELN", 		title: "[[#{HQP_L_CLAIM_NO}]]"},//Claim No.
 			{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"},// Line Item.
 			{data: "TEXT", 			title: "[[#{HQP_L_CLAIM_REASON}]]"},// Reason
@@ -125,7 +123,7 @@ $(function(){
 					}
 				}
 
-				$("#totalRows").html(JpUtilsNumber.addComma(claimList.length) + " row(s).");
+				showGridTotalRows($("#totalRows"), claimList);
 
 				return claimList;
 			}			
