--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/display/inquiry/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/display/inquiry/list.html
@@ -86,10 +86,6 @@
 	</div>
 	
 <script>
-//화면중 일부 area 를 채우는 그리드 예제. 상위 div #sample-grid-area 영역을 100% 채움.
-//컬럼 width 자동. scroller 자동.
-//고정된 맵 데이터 사용. 페이지 생성시 데이터 넘겨서 그리드 만드는 방식
-
 $(function(){
 	$("input:radio[name=pDocType][value='[[${pDocType}]]']").prop("checked", true);
 	$("#pOrderType").val("[[${pOrderType}]]");
@@ -98,9 +94,7 @@ $(function(){
 	Calendar.makeBeetweenCalendar($("#pFromDate"), "[[${pFromDate}]]", $("#pToDate"), "[[${pToDate}]]");
 	
 	$tableObj = $("#TBL_grid").DataTable({
-		ordering: true,// 정렬 기능 켬
-		scrollY: 100,
-		columns : [
+		columns: [
 			{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"},//P.O. No.		
 			{data: "VBELN", title: "[[#{HQP_L_INQUIRY_NO}]]"},//Inuqiry No.
 			{data: "ERDAT2", title: "[[#{HQP_L_INQUIRY_DATE}]]"},//Create Date
@@ -131,7 +125,6 @@ $(function(){
 			dataSrc: function(response) 
 			{
 				let result = response.RESULT;
-				let returnData = new Array();
 				
 				for (let i=0, length=result.length; i<length; i++)
 				{
@@ -147,7 +140,7 @@ $(function(){
 					};
 				};
 				
-				$("#totalRows").html(JpUtilsNumber.addComma(result.length) + " row(s).");
+				showGridTotalRows($("#totalRows"), result);
 
 				return result;
 			}
